--- a/Api/package.json
+++ b/Api/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "google-auth-library": "^9.14.2",
-    "googleapis": "^144.0.0"
+    "googleapis": "^144.0.0",
+    "validator": "^13.12.0"
   }
 }
