--- a/Api/package.json
+++ b/Api/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "firebase": "^11.0.2",
     "firebase-admin": "^12.7.0",
     "google-auth-library": "^9.14.2",
     "googleapis": "^144.0.0",
